--- a/index.html
+++ b/index.html
@@ -27,4 +27,5 @@
           </main>
           <footer>&copy; Copyright Will Pringle 2021</footer>
     </body>
+    <a href="Page-2.html">Move to Page 2</a>
 </html>
